<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context="com.rainbow.stopebola.PreventionSymptomFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="#fbf3f3">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="Prevention"
                    android:textColor="#208335"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#208335" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_one_title"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_one_content"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_two_title"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_two_content"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_three_title"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_three_content"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_four_title"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_four_content"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_five_title"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_five_content"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_six_title"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/prevention_six_content"/>
                </LinearLayout>




            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Symptômes"
                    android:padding="5dp"
                    android:textColor="#208335"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#208335" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sym_one"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sym_two"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sym_three"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sym_four"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sym_five"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sym_six"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sym_seven"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9f9f9f" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
